<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/ic_computer"
        android:title="@string/menu_cat_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ele"
        android:enabled="true"
        android:icon="@drawable/ic_memory_24dp"
        android:title="@string/menu_cat_ele"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bio"
        android:enabled="true"
        android:icon="@drawable/ic_flask_24dp"
        android:title="@string/menu_cat_bio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_liceo"
        android:enabled="true"
        android:icon="@drawable/ic_microscope"
        android:title="@string/menu_cat_liceo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_art"
        android:enabled="true"
        android:icon="@drawable/ic_brush_24dp"
        android:title="@string/menu_cat_art"
        app:showAsAction="ifRoom" />
</menu>